--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Introduction to R/RStudio</title>
+		<title>Reproducibility Guidelines</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -26,19 +26,20 @@
 			<div class="slides">
 <section data-markdown>
 	<textarea data-template>
-		## Everything you wanted to know about R/RStudio That I could Fit Into A 50 Minute Presenation without hurting myself
+		## Reprodducibility Guidelines, Academic Libraries, & Data Services
 
 		Franklin Sayre
 		[fdsayre@umn.edu](fdsayre@umn.edu)
 	</textarea>
 </section>
 
+<section data-background-image="9368801248_da56d822b8_o.jpg">
+	<h2>Image</h2>
+</section>
+
 <section data-markdown>
 	<textarea data-template>
-		## 50 minutes 
-		## is not 
-		## a lot 
-		## of time 
+
 	</textarea>
 </section>
 
