--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 <section data-markdown>
 	<textarea data-template>
-		## Reprodducibility Guidelines, Academic Libraries, & Data Services
+		## Reproducibility Guidelines, Academic Libraries, & Data Services
 
 		Franklin Sayre
 		[fdsayre@umn.edu](fdsayre@umn.edu)
@@ -34,35 +34,20 @@
 </section>
 
 <section data-background-image="9368801248_da56d822b8_o.jpg">
-	<h2>Image</h2>
+	<h2>Why Academic Librarians and Reproducibility?</h2>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
 
+##Why Academic Librarians and Reproducibility?
+> “First, a finding needs to be repeatable to count as a scientific discovery. Second, research needs to be reported in such a manner that others can reproduce the procedures.”
+
 	</textarea>
 </section>
 
-<section data-markdown>
-	<textarea data-template>
-		## Objectives for today
-		- Why/how use R?
-		- Why use RStudio & the RStudio interface
-		- Getting data into R as a CSV file
-		- Exploring your data
-		- Getting summary statistics
-		- Get data out of R as a CSV file
-	</textarea>
-</section>
 
-<section data-markdown>
-	<textarea data-template>
-		## This presentation 
-		(and thus links to all the materials)
-		
-		[z.umn.edu/rtutorial](http://z.umn.edu/rtutorial)
-	</textarea>
-</section>
+
 
 <section data-markdown>
 	<textarea data-template>
