first draft half done

--- a/index.html
+++ b/index.html
@@ -33,73 +33,133 @@
 	</textarea>
 </section>
 
+
+<section data-markdown>
+	<textarea data-template>
+	## Take-aways
+	
+	<p class="fragment fade-up">Reproducibility is, to a large degree, the work of academic librarians.</p>
+	<p class="fragment fade-up">Data, broadly defined, is a major part of reproducibility.</p>
+	<p class="fragment fade-up">Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
+
+		</textarea>
+</section>
+
+
+<section data-markdown>
+	<textarea data-template>
+	### Reproducibility
+	
+	> "the ability of a researcher to duplicate the results of a prior study using the ** same materials and procedures ** as were used by the original investigator."
+
+	
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+	### Replicability
+	
+	> “the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but ** new data are collected **.” 
+
+	
+	</textarea>
+</section>
+
+
 <section data-background-image="9368801248_da56d822b8_o.jpg">
-	<h2>Why Academic Librarians and Reproducibility?</h2>
+	<h2 style="color:Tomato;">Why Academic Librarians and Reproducibility?</h2>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
 
-## Why Academic Librarians and Reproducibility?
-> “First, a finding needs to be repeatable to count as a scientific discovery. Second, research needs to be reported in such a manner that others can reproduce the procedures.”
+> “First, a finding needs to be repeatable to count as a scientific discovery. Second, <em style="color:Tomato;">research needs to be reported in such a manner that others can reproduce the procedures</em>.”
+
+Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainstream.
+
+
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+
+### “**research needs to be reported in such a manner that others can reproduce the procedures**”
+
+
 
 	</textarea>
 </section>
 
 
+<section data-markdown>
+	<textarea data-template>
 
+	## The content of science VS the packaging of science
+	
+	</textarea>
+</section>
 
 <section data-markdown>
 	<textarea data-template>
-		## Installation:
+	
+	| Content        | Package           |
+| ------------- |:-------------:|
+| hypothesis      | was it published? | 
+| study design      | adequate methods reporting      |
+| statistical analysis | analysis plan transparency      |
+|  | code, data, materials transparency      |
+|  | accessibility      |
+|  | discoverability      |
 
-		Download the [newest version of R](https://cran.r-project.org/mirrors.html)
+	
+	</textarea>
+</section>
+
+<section data-background-image="11LUNCH1_SPAN-jumbo.jpg">
+	<h2 style="color:Tomato;">Guidlines</h2>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+
+## TOP Guidelines
+	</textarea>
+</section>
+
+
+<section data-markdown>
+	<textarea data-template>		
+<p><em style="color:Tomato;"> Proper Citation of:</em> data, code, and materials.</p>
+<p class="fragment fade-up"><em style="color:Tomato;">Data Transparency, Analytic Methods (code) Transparency, Research Materials Transparency:</em> Sharing of underlying data, analytical code, and research materials.</p>
+	
+	</textarea>
+</section>
 		
-		Download the [FREE Desktop version of R Studio](https://www.rstudio.com/products/rstudio/download/)
-	</textarea>
-</section>
-
-
 <section data-markdown>
-	<textarea data-template>
-		## All the code for today: 
-		- [Rnotebook RMD](https://github.com/fdsayre/TeachingRIntro50Minutes/blob/master/50MinuteRTutorial.Rmd)
-		- [RNotebook HTML](https://fdsayre.github.io/TeachingRIntro50Minutes/50MinuteRTutorial.nb.html) 
-	</textarea>
-</section>
+	<textarea data-template>		
+<p><em style="color:Tomato;">Design and analysis transparency:</em> This standard encourages authors to follow explicit guidelines for disclosing key aspects of research design and analysis.</p>
+<p class="fragment fade-up"><em style="color:Tomato;">Preregistration:</em> both of studies and analysis plans.</p>
+<p class="fragment fade-up"><em style="color:Tomato;">Replication:</em> This standard relates to the journal's willingness to publish direct replications of studies it previously published.</p>
 
-<section data-markdown>
-	<textarea data-template>
-		## CSV is a good dog
-```
-0,0,1,3,1,2,4,7,8,3,3,3,10,5,7,4,7,7,12,18,6,13,11,11,7,7,4,6,8,8,4,4,5,7,3,4,2,3,0,0
-0,1,2,1,2,1,3,2,2,6,10,11,5,9,4,4,7,16,8,6,18,4,12,5,12,7,11,5,11,3,3,5,4,4,5,5,1,1,0,1
-0,1,1,3,3,2,6,2,5,9,5,7,4,5,4,15,5,11,9,10,19,14,12,17,7,12,11,7,4,2,10,5,4,2,2,3,2,2,1,1
-0,0,2,0,4,2,2,1,6,7,10,7,9,13,8,8,15,10,10,7,17,4,4,7,6,15,6,4,9,11,3,5,6,3,3,4,2,3,2,1
-0,1,1,3,3,1,3,5,2,4,4,7,6,5,3,10,8,10,6,17,9,14,9,7,13,9,12,6,7,7,9,6,3,2,2,4,2,0,1,1
-```		
-
-### Download and save the CSV file for this session:
-[mpls_energy_benchmarking_2015.csv](https://raw.githubusercontent.com/fdsayre/TeachingRIntro50Minutes/master/mpls_energy_benchmarking_2015.csv)
 
 	</textarea>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
-		## Other Tutorials
-		- [Data Visualization Basics with R](https://linkalis.github.io/r-data-viz-basics-tutorials/)
-		- [Datacamp](http://datacamp.com)
-		- [R for Data Science](http://r4ds.had.co.nz/)
+	
+## NIH Guidelines
+	
 	</textarea>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
-		## Other Resources and Getting Help
-		- [Programming and Pizza](https://dash.umn.edu/tag/programming-and-pizza/)
-		- [ropensci](https://ropensci.org/packages/)
-		- [Google](http://www.google.com)
+	
+## American Statistical Association Guidelines
+	
 	</textarea>
 </section>
 
@@ -107,7 +167,6 @@
 	<textarea data-template>
 	</textarea>
 </section>
-
 
 			</div>
 		</div>
