--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Reproducibility Guidelines</title>
+		<title>Reproducibility Guidelines and The Reporting of Science</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -26,13 +26,16 @@
 			<div class="slides">
 <section data-markdown>
 	<textarea data-template>
-		## Reproducibility Guidelines, Academic Libraries, & Data Services
+		## Reproducibility Guidelines & The Reporting Of Science
 
 		Franklin Sayre
 		[fdsayre@umn.edu](fdsayre@umn.edu)
 	</textarea>
 </section>
 
+<section data-background-image="bomb.gif">
+	<h2 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h2>
+</section>
 
 <section data-markdown>
 	<textarea data-template>
