--- a/index.html
+++ b/index.html
@@ -161,13 +161,36 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 <section data-markdown>
 	<textarea data-template>
 	
-## American Statistical Association Guidelines
+## American Statistical Association (ASA) Guidelines
 	
 	</textarea>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
+
+<p>Funding small-scale <em style="color:Tomato;">software development, data products, and replications</em> of previous studies.</p>
+<p class="fragment fade-up">Increasing support for the methodological training, with particular <em style="color:Tomato;">emphasis on the need for data management skills</em>.</p>
+	
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+
+<p>Adding <em style="color:Tomato;">code management plans to existing Data Management Plans (DMPs)</em> and asking grant reviewers to explicitly assess DMPs.</p>
+<p class="fragment fade-up">Creating mandatory undergraduate reproducibility and <em style="color:Tomato;">computational research classes</em>.</p>
+	
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+
+<p>Increasing the impact that robust and reliable research practices on grants. </p>
+<p class="fragment fade-up">Providing increased guidance, more statisticians as part of grant review committees, and the development of standard terminology around reproducibility.</p>
+
+	
 	</textarea>
 </section>
 
