added harry in a box picture

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
 			<div class="slides">
 <section data-markdown>
 	<textarea data-template>
-		## Reproducibility Guidelines & The Reporting Of Science
+	
+	
+		<h2>Reproducibility Guidelines & The Reporting Of Science</h2>
 
-		Franklin Sayre
-		[fdsayre@umn.edu](fdsayre@umn.edu)
+		<p>Franklin Sayre</p>
+		<p>[fdsayre@umn.edu](fdsayre@umn.edu)</p>
 	</textarea>
 </section>
 
 <section data-background-image="bomb.gif">
-	<h2 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h2>
+	<h1 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h1>
 </section>
 
 <section data-markdown>
@@ -85,21 +87,10 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 	</textarea>
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-image="17330655219_94e99f2eca_h.jpg">
 	<textarea data-template>
 
-### “**research needs to be reported in such a manner that others can reproduce the procedures**”
-
-
-
-	</textarea>
-</section>
-
-
-<section data-markdown>
-	<textarea data-template>
-
-	## The content of science VS the packaging of science
+	<h2 style="color:Tomato; vertical-align: top;">The content of science vs the packaging of science</h2>
 	
 	</textarea>
 </section>
@@ -120,14 +111,30 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 	</textarea>
 </section>
 
+<section data-markdown>
+	<textarea data-template>
+	
+### Packaging
+
+Was the research published?
+Were methods adequately reported?
+Was there analysis plan transparency?
+Was there code, data, and materials transparency?
+Is the published article accessible? 
+Is the published article discoverable? 
+
+	
+	</textarea>
+</section>
+
 <section data-background-image="11LUNCH1_SPAN-jumbo.jpg">
-	<h2 style="color:Tomato;">Guidlines</h2>
+	<h1 style="color:Tomato;">Guidlines</h1>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
 
-## TOP Guidelines
+# TOP Guidelines
 	</textarea>
 </section>
 
