--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 	
 ### Packaging
 
-Was the research published?
-Were methods adequately reported?
-Was there analysis plan transparency?
-Was there code, data, and materials transparency?
-Is the published article accessible? 
-Is the published article discoverable? 
+* Was the research published?
+* Were methods adequately reported?
+* Was there analysis plan transparency?
+* Was there code, data, and materials transparency?
+* Is the published article accessible? 
+* Is the published article discoverable? 
 
 	
 	</textarea>
