--- a/index.html
+++ b/index.html
@@ -98,14 +98,11 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 <section data-markdown>
 	<textarea data-template>
 	
-	| Content        | Package           |
-| ------------- |:-------------:|
-| hypothesis      | was it published? | 
-| study design      | adequate methods reporting      |
-| statistical analysis | analysis plan transparency      |
-|  | code, data, materials transparency      |
-|  | accessibility      |
-|  | discoverability      |
+### Content 
+
+* Hypothesis
+* Study Design
+* Analysis
 
 	
 	</textarea>
