--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<textarea data-template>
 	### Reproducibility
 	
-	> "the ability of a researcher to duplicate the results of a prior study using the ** same materials and procedures ** as were used by the original investigator."
+	> "the ability of a researcher to duplicate the results of a prior study using the <em style="color:Tomato;">same materials and procedures</em> as were used by the original investigator."
 
 	
 	</textarea>
@@ -65,7 +65,7 @@
 	<textarea data-template>
 	### Replicability
 	
-	> “the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but ** new data are collected **.” 
+	> “the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but <em style="color:Tomato;">new data are collected</em>.” 
 
 	
 	</textarea>
@@ -81,7 +81,7 @@
 
 > “First, a finding needs to be repeatable to count as a scientific discovery. Second, <em style="color:Tomato;">research needs to be reported in such a manner that others can reproduce the procedures</em>.”
 
-Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainstream.
+<small>Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainstream.</small>
 
 
 	</textarea>
@@ -125,13 +125,13 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 </section>
 
 <section data-background-image="11LUNCH1_SPAN-jumbo.jpg">
-	<h1 style="color:Tomato;">Guidlines</h1>
+	<h2 style="color:Tomato;">Guidelines</h2>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
 
-# TOP Guidelines
+### TOP (Transparency and Openness Promotion) Guidelines
 	</textarea>
 </section>
 
@@ -157,15 +157,7 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 <section data-markdown>
 	<textarea data-template>
 	
-## NIH Guidelines
-	
-	</textarea>
-</section>
-
-<section data-markdown>
-	<textarea data-template>
-	
-## American Statistical Association (ASA) Guidelines
+### NIH Guidelines
 	
 	</textarea>
 </section>
@@ -197,6 +189,15 @@ Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainst
 	
 	</textarea>
 </section>
+
+<section data-markdown>
+	<textarea data-template>
+	
+### American Statistical Association (ASA) Guidelines
+	
+	</textarea>
+</section>
+
 
 			</div>
 		</div>
