added more content

--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
 <section data-markdown>
 	<textarea data-template>
 
-### TOP (Transparency and Openness Promotion) Guidelines
+### TOP (Transparency and Openness Prom	otion) Guidelines
 	</textarea>
 </section>
 
 
 <section data-markdown>
-	<textarea data-template>		
+	<textarea data-template>	
+	### TOP Guidelines	
 <p><em style="color:Tomato;"> Proper Citation of:</em> data, code, and materials.</p>
 <p class="fragment fade-up"><em style="color:Tomato;">Data Transparency, Analytic Methods (code) Transparency, Research Materials Transparency:</em> Sharing of underlying data, analytical code, and research materials.</p>
 	
@@ -145,7 +146,8 @@
 </section>
 		
 <section data-markdown>
-	<textarea data-template>		
+	<textarea data-template>
+		### TOP Guidelines	
 <p><em style="color:Tomato;">Design and analysis transparency:</em> This standard encourages authors to follow explicit guidelines for disclosing key aspects of research design and analysis.</p>
 <p class="fragment fade-up"><em style="color:Tomato;">Preregistration:</em> both of studies and analysis plans.</p>
 <p class="fragment fade-up"><em style="color:Tomato;">Replication:</em> This standard relates to the journal's willingness to publish direct replications of studies it previously published.</p>
@@ -156,15 +158,15 @@
 
 <section data-markdown>
 	<textarea data-template>
-	
-### NIH Guidelines
+	### American Statistical Association (ASA) Guidelines
+
 	
 	</textarea>
 </section>
 
 <section data-markdown>
 	<textarea data-template>
-
+### American Statistical Association (ASA) Guidelines
 <p>Funding small-scale <em style="color:Tomato;">software development, data products, and replications</em> of previous studies.</p>
 <p class="fragment fade-up">Increasing support for the methodological training, with particular <em style="color:Tomato;">emphasis on the need for data management skills</em>.</p>
 	
@@ -173,6 +175,7 @@
 
 <section data-markdown>
 	<textarea data-template>
+### American Statistical Association (ASA) Guidelines
 
 <p>Adding <em style="color:Tomato;">code management plans to existing Data Management Plans (DMPs)</em> and asking grant reviewers to explicitly assess DMPs.</p>
 <p class="fragment fade-up">Creating mandatory undergraduate reproducibility and <em style="color:Tomato;">computational research classes</em>.</p>
@@ -182,6 +185,7 @@
 
 <section data-markdown>
 	<textarea data-template>
+### American Statistical Association (ASA) Guidelines
 
 <p>Increasing the impact that robust and reliable research practices on grants. </p>
 <p class="fragment fade-up">Providing increased guidance, more statisticians as part of grant review committees, and the development of standard terminology around reproducibility.</p>
@@ -193,11 +197,34 @@
 <section data-markdown>
 	<textarea data-template>
 	
-### American Statistical Association (ASA) Guidelines
+	### NIH Guidelines
+
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+	
+### Packaging
+
+* Was the research published? <em style="color:Tomato;">(Registered Reports, Pre-Registration, Pre-Prints, Traditional Publications)</em>
+* Were methods adequately reported? <em style="color:Tomato;">(Reporting Guidelines)</em>
+* Was there analysis plan transparency? <em style="color:Tomato;">(pre-registration)</em>
 	
 	</textarea>
 </section>
 
+<section data-markdown>
+	<textarea data-template>
+	
+### Packaging
+
+* Was there code, data, and materials transparency? <em style="color:Tomato;">(Disciplinary and institutional repositories, appropriate citation of papers, code, materials, Data Management)</em>
+* Is the published article accessible? <em style="color:Tomato;">(Open Access, Preprints, Self-Archiving)</em>
+* Is the published article discoverable? <em style="color:Tomato;">(Indexing, Properly applied metadata)</em>
+	
+	</textarea>
+</section>
 
 			</div>
 		</div>
