--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
 	<h1 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h1>
 </section>
 
-<section data-markdown>
-	<textarea data-template>
+<section>
 	
-	<img src:"acrlrepro.png">
-	
-	</textarea>
+<img data-src="acrlrepro.png">
+
 </section>
 
 <section data-markdown>
