--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	<h2 style="color:Tomato;">Guidelines</h2>
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-color="#fa9f42">
 	<textarea data-template>
 
 ### TOP (Transparency and Openness Prom	otion) Guidelines
@@ -162,7 +162,7 @@
 	</textarea>
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-color="#fa9f42">
 	<textarea data-template>
 	### American Statistical Association (ASA) Guidelines
 
@@ -200,10 +200,18 @@
 	</textarea>
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-color="#fa9f42">
 	<textarea data-template>
 	
 	### NIH Guidelines
+
+	</textarea>
+</section>
+
+<section data-markdown data-background-color="#fa9f42">
+	<textarea data-template>
+	
+	## Revisiting Out Role in the packaging of science
 
 	</textarea>
 </section>
