small spelling fixes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <section data-markdown data-background-image="17330655219_94e99f2eca_h.jpg">
 	<textarea data-template>
 
-	<h2 style="color:Tomato; vertical-align: top;">The content of science vs the packaging of science</h2>
+	<h2 style="color:Tomato; vertical-align: top;">Content vs reporting (packaging) of science</h2>
 	
 	</textarea>
 </section>
@@ -117,7 +117,7 @@
 <section data-markdown>
 	<textarea data-template>
 	
-### Packaging
+### Reporting (Packaging)
 
 * Was the research published?
 * Were methods adequately reported?
@@ -211,7 +211,7 @@
 <section data-markdown data-background-color="#fa9f42">
 	<textarea data-template>
 	
-	## Revisiting Out Role in the packaging of science
+	## Revisiting Our Role in the reporting of science
 
 	</textarea>
 </section>
