--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<aside class="notes"> 
 So hello, My name is Franklin Sayre, I’m the pharmacy librarian at the University of Minnesota. 
 I started looking at issues around the reproducibility of study results around 3 years ago
-In both of our roles we work with both researchers and professional student such as pharmacists, psychologists, and speech pathologists. Those professional students move on to be clinicians, applying the results of research, usually in environments where they don’t have  access to the range of resources available here at the University. So, we both really care about issues around reproducibility and access to the products of research, both in how we can support researchers and how we can make that research more… for lack of a better word “trustable” and “accessible” for clinicians. 
+As someone who works with both researchers and clinical student this topic was very important to me. Professional students move on to be clinicians, applying the results of research, usually in environments where they don’t have access to the range of resources we have at R1 institutions. 
 
 	</aside>
 </section>
@@ -44,7 +44,7 @@ In both of our roles we work with both researchers and professional student such
 <section data-background-image="bomb.gif">
 	<h1 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h1>
 		<aside class="notes">
-
+So this is what I really wanted to call this presentation. 
 
 	</aside>
 
