--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ So this is what I really wanted to call this presentation.
 
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-image="charlie.gif">
 	<textarea data-template>
 	## Take-aways
 	
