--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ So this is what I really wanted to call this presentation.
 
 <section data-markdown data-background-image="charlie.gif">
 	<textarea data-template>
-	## Take-aways
+	<h2 style="color:Tomato;">Take-aways</h2>
 	
-	<p class="fragment fade-up">Reproducibility is, to a large degree, the work of academic librarians.</p>
-	<p class="fragment fade-up">Data, broadly defined, is a major part of reproducibility.</p>
-	<p class="fragment fade-up">Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
+	<p class="fragment fade-up" style="color:Tomato;">Reproducibility is, to a large degree, the work of academic librarians.</p>
+	<p class="fragment fade-up" style="color:Tomato;">Data, broadly defined, is a major part of reproducibility.</p>
+	<p class="fragment fade-up" style="color:Tomato;">Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
 
 		</textarea>
 </section>
