got rid of charlie.gif

--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@ So this is what I really wanted to call this presentation.
 
 </section>
 
-<section data-markdown data-background-image="charlie.gif">
+<section data-markdown>
 	<textarea data-template>
-	<h2 style="color:Tomato;">Take-aways</h2>
+	<h2>Take-aways</h2>
 	
-	<p class="fragment fade-up" style="color:Tomato;">Reproducibility is, to a large degree, the work of academic librarians.</p>
-	<p class="fragment fade-up" style="color:Tomato;">Data, broadly defined, is a major part of reproducibility.</p>
-	<p class="fragment fade-up" style="color:Tomato;">Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
+	<p class="fragment fade-in">1. Reproducibility is, to a large degree, the work of academic librarians.</em></p>
+	<p class="fragment fade-up">2. Data, broadly defined, is a major part of reproducibility.</p>
+	<p class="fragment fade-up">3. Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
 
 		</textarea>
 </section>
-
 
 <section data-markdown>
 	<textarea data-template>
