added speaker notes framework

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		
 		
 			<aside class="notes"> 
-So hello, My name is Franklin Sayre, I’m the pharmacy librarian at the University of Minnesota. 
-I started looking at issues around the reproducibility of study results around 3 years ago
-As someone who works with both researchers and clinical student this topic was very important to me. Professional students move on to be clinicians, applying the results of research, usually in environments where they don’t have access to the range of resources we have at R1 institutions. 
+So hello, My name is Franklin Sayre, I’m the pharmacy librarian at the University of Minnesota, before that I worked with public health and graduate medicine at UBC, in Vancouver, Canada.
+I started looking at issues around the reproducibility of study results around 3 years ago. My interest is really two fold. On one hand I did a history and philosophy of science program and I'm interested in issues to do with epistemology, methodology, and scientific norms. On the other hand I work with health science researchers and professional students -- students who will go on to be clinicians and use research in patient care. 
+
 
 	</aside>
 	</textarea>
@@ -47,7 +47,7 @@ As someone who works with both researchers and clinical student this topic was v
 <section data-background-image="bomb.gif">
 	<h1 style="color:Tomato;">How I learned to stop worrying and love the reproducibility crisis</h1>
 		<aside class="notes">
-So this is what I really wanted to call this presentation. 
+So this is what I really wanted to call this presentation. In part because I think the so-called "crisis" in reproducibility is actually an incredible opportunity for those of us who advocate for transparency in scientific research because it ties transparency directly to the, for lack of a better word, "truth" of scientific studies. 
 
 	</aside>
 
@@ -57,6 +57,11 @@ So this is what I really wanted to call this presentation.
 
 <img data-src="acrlrepro.png">
 
+		<aside class="notes">
+I need to mention that most of the work I've done in this area has been with Amy Reigelman the Social Science librarian at UMN. Amy and I have two recent papers, this editorial on reproducibility and another paper that presents a model for services around reproducibility that should be in C&RL in the next couple months. 
+
+	</aside>
+	
 </section>
 
 <section data-markdown>
@@ -67,6 +72,15 @@ So this is what I really wanted to call this presentation.
 	<p class="fragment fade-up">2. Data, broadly defined, is a major part of reproducibility.</p>
 	<p class="fragment fade-up">3. Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
 
+<aside class="notes">
+Three takeaways
+1. I think the following guidelines demonstrate that many, if not most (by raw number if not importance) recommendations relate to core areas -- citation, data sharing, publications -- of academic librarianship
+2. Data, creation, curation, and sharing, broadly defined, is an essential part of reproducibility.
+3. Reproducibility guidelines -- and the role academic librarians can play in improving reproducibilty -- is much wider than data management. I've heard a lot of people day that Repro is itself just a component of DM. I want to convince you that it's an opportunity. We need to engage liaisons and others in the work of repro and vice versa. There is a danger that by thinking of the libraries contribution to repro as just being DM and sharing, we miss opportunities. 
+
+</aside>
+	
+	
 		</textarea>
 </section>
 
@@ -76,6 +90,10 @@ So this is what I really wanted to call this presentation.
 	
 	> "the ability of a researcher to duplicate the results of a prior study using the <em style="color:Tomato;">same materials and procedures</em> as were used by the original investigator."
 
+<aside class="notes">
+Ok! Definition time! 
+
+</aside>
 	
 	</textarea>
 </section>
@@ -85,7 +103,10 @@ So this is what I really wanted to call this presentation.
 	### Replicability
 	
 	> “the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but <em style="color:Tomato;">new data are collected</em>.” 
+<aside class="notes">
 
+
+</aside>
 	
 	</textarea>
 </section>
@@ -93,6 +114,10 @@ So this is what I really wanted to call this presentation.
 
 <section data-background-image="9368801248_da56d822b8_o.jpg">
 	<h2 style="color:Tomato;">Why Academic Librarians and Reproducibility?</h2>
+	<aside class="notes">
+
+
+</aside>
 </section>
 
 <section data-markdown>
@@ -102,7 +127,10 @@ So this is what I really wanted to call this presentation.
 
 <small>Zwaan, R., Etz, A., Lucas, R., & Donnellan, B. (2017). Making Replication Mainstream.</small>
 
+<aside class="notes">
 
+
+</aside>
 	</textarea>
 </section>
 
@@ -110,7 +138,11 @@ So this is what I really wanted to call this presentation.
 	<textarea data-template>
 
 	<h2 style="color:Tomato; vertical-align: top;">Content vs reporting (packaging) of science</h2>
-	
+<aside class="notes">
+
+
+</aside>
+
 	</textarea>
 </section>
 
@@ -123,7 +155,10 @@ So this is what I really wanted to call this presentation.
 * Study Design
 * Analysis
 
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -139,12 +174,20 @@ So this is what I really wanted to call this presentation.
 * Is the published article accessible? 
 * Is the published article discoverable? 
 
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
 <section data-background-image="11LUNCH1_SPAN-jumbo.jpg">
 	<h2 style="color:Tomato;">Guidelines</h2>
+
+<aside class="notes">
+
+
+</aside>
 </section>
 
 <section data-markdown data-background-color="#fa9f42">
@@ -152,6 +195,11 @@ So this is what I really wanted to call this presentation.
 
 ### TOP (Transparency and Openness Prom	otion) Guidelines
 	</textarea>
+
+<aside class="notes">
+
+
+</aside>
 </section>
 
 
@@ -160,7 +208,10 @@ So this is what I really wanted to call this presentation.
 	### TOP Guidelines	
 <p><em style="color:Tomato;"> Proper Citation of:</em> data, code, and materials.</p>
 <p class="fragment fade-up"><em style="color:Tomato;">Data Transparency, Analytic Methods (code) Transparency, Research Materials Transparency:</em> Sharing of underlying data, analytical code, and research materials.</p>
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 		
@@ -171,14 +222,20 @@ So this is what I really wanted to call this presentation.
 <p class="fragment fade-up"><em style="color:Tomato;">Preregistration:</em> both of studies and analysis plans.</p>
 <p class="fragment fade-up"><em style="color:Tomato;">Replication:</em> This standard relates to the journal's willingness to publish direct replications of studies it previously published.</p>
 
+<aside class="notes">
 
+
+</aside>
 	</textarea>
 </section>
 
 <section data-markdown data-background-color="#fa9f42">
 	<textarea data-template>
 	### American Statistical Association (ASA) Guidelines
+<aside class="notes">
 
+
+</aside>
 	
 	</textarea>
 </section>
@@ -188,7 +245,10 @@ So this is what I really wanted to call this presentation.
 ### American Statistical Association (ASA) Guidelines
 <p>Funding small-scale <em style="color:Tomato;">software development, data products, and replications</em> of previous studies.</p>
 <p class="fragment fade-up">Increasing support for the methodological training, with particular <em style="color:Tomato;">emphasis on the need for data management skills</em>.</p>
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -198,7 +258,10 @@ So this is what I really wanted to call this presentation.
 
 <p>Adding <em style="color:Tomato;">code management plans to existing Data Management Plans (DMPs)</em> and asking grant reviewers to explicitly assess DMPs.</p>
 <p class="fragment fade-up">Creating mandatory undergraduate reproducibility and <em style="color:Tomato;">computational research classes</em>.</p>
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -209,7 +272,10 @@ So this is what I really wanted to call this presentation.
 <p>Increasing the impact that robust and reliable research practices on grants. </p>
 <p class="fragment fade-up">Providing increased guidance, more statisticians as part of grant review committees, and the development of standard terminology around reproducibility.</p>
 
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -217,7 +283,10 @@ So this is what I really wanted to call this presentation.
 	<textarea data-template>
 	
 	### NIH Guidelines
+<aside class="notes">
 
+
+</aside>
 	</textarea>
 </section>
 
@@ -225,7 +294,10 @@ So this is what I really wanted to call this presentation.
 	<textarea data-template>
 	
 	## Revisiting Our Role in the reporting of science
+<aside class="notes">
 
+
+</aside>
 	</textarea>
 </section>
 
@@ -237,7 +309,10 @@ So this is what I really wanted to call this presentation.
 * Was the research published? <em style="color:Tomato;">(Registered Reports, Pre-Registration, Pre-Prints, Traditional Publications)</em>
 * Were methods adequately reported? <em style="color:Tomato;">(Reporting Guidelines)</em>
 * Was there analysis plan transparency? <em style="color:Tomato;">(pre-registration)</em>
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -249,7 +324,10 @@ So this is what I really wanted to call this presentation.
 * Was there code, data, and materials transparency? <em style="color:Tomato;">(Disciplinary and institutional repositories, appropriate citation of papers, code, materials, Data Management)</em>
 * Is the published article accessible? <em style="color:Tomato;">(Open Access, Preprints, Self-Archiving)</em>
 * Is the published article discoverable? <em style="color:Tomato;">(Indexing, Properly applied metadata)</em>
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -257,7 +335,10 @@ So this is what I really wanted to call this presentation.
 	<textarea data-template>
 	
 ### Questions?
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
@@ -267,7 +348,10 @@ So this is what I really wanted to call this presentation.
 ### Image Credits
 
 - 
-	
+<aside class="notes">
+
+
+</aside>
 	</textarea>
 </section>
 
